@@ -5,6 +5,7 @@ v0.7.2
 * Rework for parsing the registry
 * rework of templates, are part of options now (see ?setTemplate, ?getTemplate)
 * experimental use of polmineR.Rcpp-package for fast counts for whole corpus
+* new convenience function install.corpus to install CWB corpus wrapped into R data package
 
 v0.7.1
 * size-method now allows for a param 'sAttribute'
